src/objects/NO_Insurance_IP__c.object
<CustomObject>
    <fields>
        <fullName>Age_Next_Bday__c</fullName>
        <label>Age Next Bday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Females_Non_Smoker__c</fullName>
        <label>Females Non Smoker</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Females_Smoker__c</fullName>
        <label>Females Smoker</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Waiting_Period__c</fullName>
        <label>IP Waiting Period</label>
        <picklist>
            <picklistValues>
                <fullName>30-Day Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-Day Waiting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_IP_Period__c</fullName>
        <label>Insurance IP Period</label>
        <picklist>
            <picklistValues>
                <fullName>two years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>age 65</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Males_Non_Smoker__c</fullName>
        <label>Males Non Smoker</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Males_Smoker__c</fullName>
        <label>Males Smoker</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>NO Insurance IP</label>
    <nameField>
        <label>NO Insurance IP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NO Insurance IPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>